--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">AndroidSkeleton</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="internet_error">Could not connect to sever, Please check your internet connection or try again later.</string>
+    <string name="error_unable_to_connect_to_the_server_try_again">Something snapped. Please check internet connection and try again.</string>
+    <string name="error_something_went_wrong_try_again">Something went wrong. Please try again later.</string>
 </resources>
